--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-joi-validation": "^5.0.0",
     "ioredis": "^4.19.2",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
